--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,27 +94,45 @@ header {
   margin-top: 20px;
 }
 
-.header-left {
+.topnav {
+  /* float: right; */
+  /* background-color: #0d50aa; */
+  overflow: hidden;
+}
+
+.topnav .nav-left {
   float: left;
 }
 
-.header-right {
+.topnav .nav-right {
   float: right;
-  margin-right: -25px;
 }
 
-.header-right a {
-  line-height: 65px;
-  padding: 0 25px;
-  color: white;
-  display: block;
+.topnav a {
   float: left;
-  transition: all 0.5s;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 15px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  line-height: 2;
+  transition: background 250ms ease;
 }
 
-.header-right a:hover {
+.topnav a:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
+
+.topnav a.active {
+  background-color: rgb(74, 114, 173);
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
 
 .menu-icon{
   color: white;
