--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,25 +29,43 @@ a {
   text-align: center;
 }
 
+.top-wrapper {
+  margin-top: 62px;
+  padding: 180px 0 100px 0;
+  background-image: url(https://1.bp.blogspot.com/-ylPXJC-frmI/XqG4VDqqs-I/AAAAAAAAKuI/uV9cD1b6bvks8VQGn3XBaW34pJyRf9MXwCLcBGAsYHQ/s1600/gambar.png);
+  background-position: right 10% bottom 30%;
+  background-color: #0d50aa;
+  background-origin: border-box;
+  background-size: 35%;
+  background-repeat: no-repeat;
+  text-align: left;
+}
+
 .top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 5px;
+  font-size: 30px;
+  letter-spacing: 2px;
   margin-bottom: 10px;
+  color: #fff;
+  font-weight: 700;
+  font-family: Montserrat, sans-serif;
 }
 
 .top-wrapper p {
-  opacity: 0.7;
   margin-bottom: 3px;
+  font-size: 14px;
+  color: #fff;
+  font-family: Montserrat, sans-serif;
 }
 
 .btn-wrapper {
-  text-align: center;
+  text-align: left;
   margin: 20px 0;
 }
 
 .btn-wrapper p {
+  text-indent: 8%;
   margin: 10px 0;
+  color: #fff;
 }
 
 .signup {
@@ -67,7 +85,6 @@ a {
   padding: 12px 24px;
   color: white;
   display: inline-block;
-  opacity: 0.8;
   border-radius: 4px;
   text-align: center;
 }
@@ -76,22 +93,29 @@ a {
   opacity: 1;
 }
 
-.fa {
+.fa,
+.fab {
   margin-right: 5px;
 }
 
 header {
-  height: 65px;
+  /* height: 65px; */
   width: 100%;
-  background-color: rgba(34, 49, 52, 0.9);
-  position :fixed;
+  background-color: #0d50aa;
+  position: fixed;
   top: 0;
   z-index: 10;
 }
 
 .logo {
-  width: 124px;
-  margin-top: 20px;
+  width: 184px;
+  transform: translateY(10%);
+  /* padding-top: 10px; */
+  /* margin-top: 20px; */
+}
+
+.header-left {
+  float: left;
 }
 
 .topnav {
@@ -133,60 +157,69 @@ header {
   display: none;
 }
 
-
-.menu-icon{
+/* Tambahkan CSS untuk menu-icon */
+.menu-icon {
   color: white;
   float: right;
   font-size: 25px;
   padding: 21px 0;
+  /* Gantikan property display ke none */
   display: none;
 }
 
-.lesson-wrapper {
+.team-wrapper {
   padding-bottom: 80px;
   padding-left: 5%;
   padding-right: 5%;
-  background-color: #f7f7f7;
+  background-color: #f1f5f8;
   text-align: center;
 }
 
 .heading {
-  padding-top: 80px;
+  padding-top: 50px;
   padding-bottom: 50px;
-  color: #5f5d60;
+  color: rgb(2, 2, 2);
 }
 
 .heading h2 {
-  font-weight: normal;
-}
-
-.lesson {
-  float: left;
-  width: 25%;
-}
-
-.lesson-icon {
+  font-weight: bold;
+  margin: 0 0 15px 0;
   position: relative;
-}
-
-.lesson-icon p {
-  position: absolute;
-  top: 44%;
-  width: 100%;
-  color: white;
-}
-
-.text-contents {
-  width: 80%;
-  display: inline-block;
-  margin-top: 15px;
-  font-size: 15px;
-  color: #b3aeb5;
+  font-size: 60px;
+  text-transform: uppercase;
 }
 
 .heading h3 {
-  font-weight: normal;
+  margin: 0 auto;
+  max-width: 740px;
+  font-size: 25px;
+  font-weight: 400;
 }
+
+.team {
+  float: left;
+  width: 20%;
+}
+
+.team-icon img {
+  width: 200px;
+  height: 250px;
+  position: relative;
+  border: 4px solid #b3aeb5;
+  border-radius: 4px;
+}
+
+.team-icon p {
+  position: relative;
+  width: 100%;
+  color: rgb(2, 2, 2);
+  margin: 0 0 0 0;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 10px;
+}
+
 
 .message-wrapper {
   border-bottom: 1px solid #eee;
