--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,4 @@
-/* Google Font */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap");
-
-/* Reset CSS (JANGAN DIHAPUS) */
+/* Reset CSS */
 html,
 body,
 ul,
