--- a/responsive.css
+++ b/responsive.css
@@ -73,7 +73,9 @@
   .header-right {
     display: none;
   }
-
+ .menu-icon {
+    display: block;
+  }
   .top-wrapper h1 {
     font-size: 26px;
     /* line-height: 25px; */
