--- a/responsive.css
+++ b/responsive.css
@@ -45,6 +45,11 @@
   .tim {
     width: 100%;
   }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: center;
+}
   .lesson {
     width: 100%;
   }
